k8s/specs/prod/ingress-nginx/ingress-cli.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mvp-cli-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  rules:
  - host: $(PROD_CLI_HOST)
    http:
      paths:
      - path: /sitecore/api/management
        backend:
          serviceName: cm-cli
          servicePort: 80
  tls:
  - secretName: sitecoredemo-tls
    hosts:
    - $(PROD_CLI_HOST)
