k8s/specs/prod/ingress-nginx/ingress-with-hashing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mvp-ingress-upstream-hash
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";   
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  rules:
  - host: $(PROD_CM_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: cm
          servicePort: 80
  tls:
  - secretName: sitecoredemo-tls
    hosts:
    - $(PROD_CM_HOST)
