k8s/specs/prod/ingress-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mvp-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $(PROD_CD_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
  - host: $(PROD_ID_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: id
          servicePort: 80
  - host: $(PROD_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: mvp-rendering
          servicePort: 80
  - host: $(PROD_CM_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: cm
          servicePort: 80
  - host: $(PROD_SUGCON_EU_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: sugcon-eu-rendering
          servicePort: 80
  tls:
  - secretName: sugcon-eu-tls
    hosts:
    - $(PROD_SUGCON_EU_HOST)
